--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 .container {
   background: rgba(255, 255, 255, 0.75);
-  max-width: 600px;
+  width: 60%;
   margin: 60px auto;
   padding: 30px 30px 10px;
   border-radius: 10px;
