--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ h1 {
   font-size: 36px;
   text-align: center;
 }
+h1 a {
+  text-decoration: none;
+}
+h1 a:hover {
+    text-decoration: underline;
+}
+
 select {
   width: 100%;
   border: 1px solid #364190;
@@ -25,6 +32,7 @@ select {
   color: #364190;
   font-size: 18px;
 }
+
 h2 {
   margin: 0 0 5px;
   font-size: 28px;
@@ -59,4 +67,34 @@ footer {
 }
 a {
   color: #364190;
+}
+@media (max-width: 540px) {
+    .container {
+        padding: 20px 10px 10px;
+        width: 80%;
+    }
+    select {
+        font-size: 16px;
+        padding : 5px;
+    }
+    h1 {
+       font-size: 30px; 
+    }
+    h2 {
+       font-size: 20px; 
+    }
+    .time {
+        font-size: 20px;
+    }
+    .city small {
+        font-size: 15px;
+    }
+    footer {
+        font-size: 14px;
+    }
+}
+@media (max-width: 360px) {
+    .container {
+        width: 90%;
+    }
 }
